tests/async/async.exp
Error: async.js:12
 12:   return 1;  // error, number != bool
       ^^^^^^^^^ async return. This type is incompatible with the expected return type of
 11: async function f1(): Promise<bool> {
                          ^^^^^^^^^^^^^ Promise
  Type argument `R` is incompatible:
     12:   return 1;  // error, number != bool
                  ^ number. This type is incompatible with
     11: async function f1(): Promise<bool> {
                                      ^^^^ boolean

Error: async.js:31
 31:   return await p; // error, number != bool
       ^^^^^^^^^^^^^^^ async return. This type is incompatible with the expected return type of
 30: async function f4(p: Promise<number>): Promise<bool> {
                                            ^^^^^^^^^^^^^ Promise
  Type argument `R` is incompatible:
     31:   return await p; // error, number != bool
                  ^^^^^^^ number. This type is incompatible with
     30: async function f4(p: Promise<number>): Promise<bool> {
                                                        ^^^^ boolean

Error: async.js:45
 45:   static async m(a): void { await a; } // error, void != Promise<void>
                          ^^^^ undefined. This type is incompatible with an implicitly-returned `Promise`.

Error: async2.js:13
 13:     var c: string = a; // Error: number ~> string
                         ^ Cannot assign `a` to `c` because number [1] is incompatible with string [2].
  References:
    7:     return 42;
                  ^^ [1]: number
   13:     var c: string = a; // Error: number ~> string
                  ^^^^^^ [2]: string

Error: async2.js:32
 32:   var voidoid3: () => void = voidoid1; // error, void != Promise<void>
                                  ^^^^^^^^ Cannot assign `voidoid1` to `voidoid3` because in the return value, `Promise` [1] is incompatible with undefined [2].
  References:
   26:   async function voidoid1() {
                                  ^ [1]: `Promise`
   32:   var voidoid3: () => void = voidoid1; // error, void != Promise<void>
                             ^^^^ [2]: undefined

Error: async2.js:50
 50:   async function voidoid5(): void { // error, void != Promise<void>
                                  ^^^^ undefined. This type is incompatible with an implicitly-returned `Promise`.

Error: async2.js:57
 57:   : Promise<number> { // error, number != void
         ^^^^^^^^^^^^^^^ Promise. This type is incompatible with an implicitly-returned Promise<void>
  Type argument `R` is incompatible:
     57:   : Promise<number> { // error, number != void
             ^^^^^^^^^^^^^^^ undefined. This type is incompatible with
     57:   : Promise<number> { // error, number != void
                     ^^^^^^ number

Error: async3.js:31
 31:   var c: string = a;
                       ^ Cannot assign `a` to `c` because number [1] is incompatible with string [2].
  References:
   12:   return 42;
                ^^ [1]: number
   31:   var c: string = a;
                ^^^^^^ [2]: string

Error: async_return_void.js:4
  4:   return;
       ^^^^^^^ async return. This type is incompatible with the expected return type of
  3: async function foo1(): Promise<string> {
                            ^^^^^^^^^^^^^^^ Promise
  Type argument `R` is incompatible:
      4:   return;
           ^^^^^^^ undefined. This type is incompatible with
      3: async function foo1(): Promise<string> {
                                        ^^^^^^ string

Error: async_return_void.js:8
  8:   return undefined;
       ^^^^^^^^^^^^^^^^^ async return. This type is incompatible with the expected return type of
  7: async function foo2(): Promise<string> {
                            ^^^^^^^^^^^^^^^ Promise
  Type argument `R` is incompatible:
      8:   return undefined;
                  ^^^^^^^^^ undefined. This type is incompatible with
      7: async function foo2(): Promise<string> {
                                        ^^^^^^ string

Error: async_return_void.js:13
 13:   return bar();
       ^^^^^^^^^^^^^ async return. This type is incompatible with the expected return type of
 11: async function foo3(): Promise<string> {
                            ^^^^^^^^^^^^^^^ Promise
  Type argument `R` is incompatible:
     13:   return bar();
                  ^^^^^ undefined. This type is incompatible with
     11: async function foo3(): Promise<string> {
                                        ^^^^^^ string

Error: await_not_in_async.js:5
  5:   await 1;
             ^ Unexpected number

Error: await_not_in_async2.js:6
  6: f(await 1);
             ^ Unexpected number

Error: await_not_in_async3.js:6
  6: f(await 1);
             ^ Unexpected number


Found 14 errors
